Important changes since GBBopen 1.2:

  * Changes to Module Manager
     - Use more consistent OS/platform compile-directory naming

  * Changes to GBBopen Tools
     - Saving/sending support for adjustable, fill-pointer, and 
       element-typed vectors, bit-vectors, and arrays
     - New FULL-DATE-AND-TIME function 
     - New PARSE-TIME-INTERVAL function 

  * Changes to GBBopen Core
     - New class, DELETED-UNIT-INSTANCE, now used to represent deleted 
       unit and space instances
     - New generic function, DELETED-INSTANCE-CLASS, and default method
       for STANDARD-UNIT-INSTANCE
     - New function, MAKE-INSTANCES-OF-CLASS-VECTOR
     - speed/allocation optimizations to MAP-SORTED-INSTANCES-OF-CLASS
       and DO-SORTED-INSTANCES-OF-CLASS
     - New :coalesce-strings and :estimated-peak-forward-references
       arguments to LOAD-BLACKBOARD-REPOSITORY (these arguments are also
       new in GBBopen Tool's WITH-READING-SAVED/SENT-OBJECTS-BLOCK)


Important changes in GBBopen 1.2:

  * The :clos package nickname is no longer added by GBBopen, use the
    :gbbopen-tools package rather than :clos for CLOS/MOP entities

  * The Mini Module Facility has been renamed to Module Manager Facility
     - Module and package names have been renamed, as appropriate
         :mini-module -> :module-manager
         :mini-module-user -> :module-manager-user
         (the old names are defined as package nicknames)
     - Support for patches added
         *PATCHES-ONLY*
         DESCRIBE-PATCHES
         GET-PATCH-DESCRIPTION
         PATCH (also START-PATCH, CONTINUE-PATCH, FINISH-PATCH)
         PATCH-LOADED-P

  * Changes to GBBopen Core       
     - Renamed CHECK-LINK-CONSISTENCY to CHECK-LINK-DEFINITIONS
     - New :value argument to SAVE-BLACKBOARD-REPOSITORY replaces
       :after-load-function mechanism (this :value argument is also
       new in GBBopen Tool's WITH-SAVING/SENDING-BLOCK)

  * New Agenda Shell functions
     - CURRENT-CONTROL-SHELL